# karmabot

./: .gitignore  LICENSE  Makefile  README.md  bot.py  config.json  config.py  config_file.py  memory_store.py  pyproject.toml  store.py
.github/workflows/: python-app.yml
src/: bot.py  config.py  config_file.py  karma_command.py  leaderboard_command.py  memory_store.py  run.py  sqlite_store.py  store.py
src/bot/: bot.py  config.py  config_file.py  guild_scanner.py  karma_command.py  leaderboard_command.py  memory_store.py  sqlite_store.py  store.py
src/bot/cogs/: cog_guild_scanner.py  cog_karma_commands.py  cog_karma_events.py
src/bot/commands/: karma_command.py  leaderboard_command.py
src/test/: mocks.py  test_bot.py  test_config.py  test_config_file.py  test_guild_scanner.py  test_karma_command.py  test_leaderboard_command.py  test_memory_store.py  test_sqlite_store.py
src/test/resources/: config-test01.json
