[tool.poetry]
name = "karmabot"
version = "1.0.0"
description = "Reddit-like karma in Discord."
authors = ["Brandon Richards <bqrichards@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.0"
janus = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
